z-index fix

--- a/src/components/toast/toast.scss
+++ b/src/components/toast/toast.scss
@@ -5,6 +5,7 @@
   min-width: 250px;
   margin-left: -125px; 
   border-radius: 4px;
+  z-index: 1;
 }
 
 .showToast {
